# tweet-inspire-agent

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  railway.json
backend/twitter_agent/: __init__.py  cli.py
backend/twitter_agent/analysis/: content_generator.py  profile_health.py  voice_analyzer.py
backend/twitter_agent/api/: __init__.py  __main__.py  config.py  dependencies.py  exceptions.py  history.py  main.py  research_cache.py  schemas.py  services.py
backend/twitter_agent/api/routers/: __init__.py  cache.py  generate.py  health.py  history.py  inspire.py
backend/twitter_agent/clients/: twitter.py
backend/twitter_agent/llm/: ollama_client.py  perplexity_client.py
backend/twitter_agent/models/: schemas.py
backend/twitter_agent/utils/: analytics.py  article_extractor.py  cache.py  calendar.py  engagement_strategy.py  file_processor.py  health_impact.py  virality.py
frontend/: .gitignore  README.md  components.json  index.html  package.json  railway.json  server.ts  tailwind.config.ts  tsconfig.json  tsr.config.json  vite.config.ts
frontend/src/: app.css  main.tsx  router.tsx
frontend/src/components/: layout.tsx
frontend/src/lib/: api.ts  query-client.tsx
frontend/src/routes/: __root.tsx  index.tsx
